# focus-space

./: .gitignore  README.md  build_installer.bat  build_release_for_users.bat  create_desktop_shortcut.bat  index.html  package-lock.json  package.json  run_dev.bat  run_frontend_preview.bat  vite.config.ts  warning.html
scripts/: ensure-deps.cjs
src/: App.tsx  styles.css  warning.css  warning.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
