[package]
name = "focus_space"
version = "0.1.0"
description = "A study-focused desktop app with study rooms, focus timer, alerts, and local progress."
authors = ["Focus Space"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "focus_space_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = "=0.3.36"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }
